--- a/Week 02: Website Using HTML and CSS/about_us.html
+++ b/Week 02: Website Using HTML and CSS/about_us.html
@@ -54,8 +54,8 @@
                 <th>Testimonial<span>&#128521;</span></th>
             </tr>
             <tr>
-                <td>Mr. Jeggyy</td>
-                <td><img src="https://pbs.twimg.com/media/Dg6IbqIW4AEjQ6y.jpg" alt="Kovalam" style="width: auto; height:300px;"></td>
+                <td>Mr. HAMSA</td>
+                <td><img src="https://pbs.twimg.com/media/Dg6IbqIW4AEjQ6y.jpg" alt="Kovalam" style="width: auto; height:100px;"></td>
                 <td>As the managing director of Aanavandi, I can proudly say that we specialize in turning every journey into an unexpected adventure.<br><br>
                     We ensure that each journey with us is a thrilling rollercoaster ride of surprises. <br><br>
                     Because at Aanavandi, we believe in keeping life exciting, one unexpected twist at a time!</td>
