--- a/Week 02: Website Using HTML and CSS/index.html
+++ b/Week 02: Website Using HTML and CSS/index.html
@@ -80,9 +80,9 @@
                 <td>I had an amazing experience. I'll definitely be using their services again!</td>
             </tr>
             <tr>
-                <td>Jackky</td>
+                <td>Appukuttan</td>
                 <td><img src="https://i.pinimg.com/236x/01/a3/10/01a3103194d1d3d523d7954ad7dd6230.jpg" alt="Kovalam" style="width: 356px; height:200px;"></td>
-                <td>Great service! The buses were comfortable, and the staff was friendly.</td>
+                <td>Great service! The buses were really comfortable, and the staff was friendly.</td>
             </tr>
         </table>
     </section>
