--- a/Week 02: Website Using HTML and CSS/success.html
+++ b/Week 02: Website Using HTML and CSS/success.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Aanavandi HomePage</title>
+    <title>Aanavandi</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="https://cdn-icons-png.flaticon.com/128/559/559380.png">
 
