--- a/Week 05: Form Validation Using JavaScript/index.html
+++ b/Week 05: Form Validation Using JavaScript/index.html
@@ -23,10 +23,7 @@
                 resize: none;
             }
             [type="submit"]{
-                clear:left;
-                margin: 20px 0 0 230px;
-                font-size:16px
-            }
+                clear: left; margin: 20px 0 0 230px; font-size:16px}
         </style>
     </head>
     <body>
@@ -126,7 +123,6 @@
                 // If all fields are valid, submit the form
                 alert("Submitted Successfully!");
                 return true;
-            
             }
         </script>
     </body>
